--- a/lib/components/Atom/dropdown/item/item.scss
+++ b/lib/components/Atom/dropdown/item/item.scss
@@ -113,6 +113,18 @@
                     }
 
                     &--false {
+                        & > p {
+                            color: var(
+                                --component-dropdownItem-label-color-selected
+                            );
+                        }
+
+                        & > svg {
+                            fill: var(
+                                --component-selectionControl-icon-selectedDefault
+                            );
+                        }
+
                         &:hover {
                             background-color: var(
                                 --component-dropdownItem-bg-hover
@@ -141,13 +153,13 @@
                     &--false {
                         & > p {
                             color: var(
-                                --component-dropdownItem-label-color-white
+                                --component-dropdownItem-label-color-default
                             );
                         }
 
                         & > svg {
                             fill: var(
-                                --component-dropdownItem-label-color-white
+                                --component-selectionControl-icon-default
                             );
                         }
 
