--- a/lib/components/Chip/dismissible-chip/dismissible-chip.scss
+++ b/lib/components/Chip/dismissible-chip/dismissible-chip.scss
@@ -1,5 +1,5 @@
 .enter {
-    transition: 0.2s ease;
+    transition: var(--core-motion-duration-200) ease;
     transform-origin: top;
 }
 
@@ -90,11 +90,6 @@
                 & > p {
                     color: var(--core-color-solid-slate-50);
                 }
-            }
-        }
-
-        &__disabled {
-            &--true {
             }
         }
     }
