--- a/lib/components/Modal/modal.scss
+++ b/lib/components/Modal/modal.scss
@@ -1,38 +1,51 @@
+@import "@quill/breakpoints.scss";
 @import "@quill/static.scss";
-
-.quill-modal-bottom {
-    &__overlay {
+.quill-modal {
+    &__background {
         position: fixed;
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
         z-index: 9999;
-        height: 100vh;
-        width: 100vw;
+        display: flex;
+        align-items: center;
         background-color: var(--core-color-opacity-black-600);
     }
-
     &__container {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        max-height: 90%;
-        min-height: var(--temp-static-spacing-289);
-        overflow: hidden;
-        display: flex;
-        align-items: stretch;
-        justify-content: space-evenly;
-        flex-direction: column;
-        background-color: var(--component-modal-bg);
-        border-top-left-radius: var(--core-borderRadius-800);
-        border-top-right-radius: var(--core-borderRadius-800);
-        opacity: var(--core-opacity-50);
-        transform: translateY(100%);
-        pointer-events: none;
-        transition: all var(--core-motion-duration-300)
-            var(--motion-easing-linear);
-
+        &--mobile{
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            max-height: 90%;
+            min-height: var(--temp-static-spacing-289);
+            overflow: hidden;
+            display: flex;
+            align-items: stretch;
+            justify-content: space-evenly;
+            flex-direction: column;
+            background-color: var(--component-modal-bg);
+            border-top-left-radius: var(--core-borderRadius-800);
+            border-top-right-radius: var(--core-borderRadius-800);
+            opacity: var(--core-opacity-50);
+            transform: translateY(100%);
+            pointer-events: none;
+            transition: all var(--core-motion-duration-300)
+                var(--motion-easing-linear); 
+        }
+        &--desktop {
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            border-radius: var(--core-borderRadius-1600);
+            width: 512px;
+            max-height: 720px;
+            justify-content: space-evenly;
+            flex-direction: column;
+            background-color: var(--component-modal-bg);
+            margin : 0 auto;
+        }
+       
         &--visible {
             opacity: var(--core-opacity-1300);
             transform: translateY(0%);
@@ -42,7 +55,7 @@
         &--expanded {
             min-height: 90%;
             max-height: 90%;
-        }
+        }  
     }
 
     &__handle-bar {
@@ -66,7 +79,12 @@
             position: absolute;
         }
     }
-
+    &__close-icon {
+        position: absolute;
+        cursor: pointer;
+        top: var(--core-spacing-1600);
+        right: var(--core-spacing-1600);
+    }
     &__content {
         &-wrapper {
             flex-grow: 1;
@@ -78,23 +96,39 @@
             display: flex;
             justify-content: center;
             align-items: center;
+           
+            &-size {
+                height: var(--temp-static-spacing-202);
+                @include breakpoint("lg") {
+                    height: var(--temp-static-spacing-288);
+                }
+            }
+           
 
             & + .quill-modal-bottom__content-title {
                 margin-top: var(--semantic-spacing-general-lg);
+                @include breakpoint("lg") {
+                    margin-top:  var(--core-spacing-1200);
+                }
             }
         }
 
         &-title {
             margin: var(--core-spacing-2200) var(--semantic-spacing-general-lg)
                 0;
+                @include breakpoint("lg") {
+                    margin: var(--core-spacing-1600);
+                }
         }
 
         &-body {
             margin: var(--semantic-spacing-general-lg)
                 var(--semantic-spacing-general-lg);
+                @include breakpoint("lg") {
+                    margin: var(--core-spacing-1200) var(--core-spacing-1600);
+                }
         }
     }
-
     &__button {
         border-width: var(--core-borderWidth-75);
 
@@ -106,6 +140,9 @@
             justify-content: center;
             flex-direction: column;
             gap: var(--semantic-spacing-gap-md);
+            @include breakpoint("lg") {
+                padding: var(--core-spacing-1200) var(--core-spacing-1600);
+            }
         }
     }
 }
