--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -48,7 +48,14 @@
         }
         .icon_wrapper {
             display: flex;
+            margin: auto;
         }
+    }
+
+    &-icons__wrapper {
+        display: flex;
+        width: 100%;
+        gap: var(--component-field-spacing-gap-xs);
     }
 
     &-label__wrapper {
@@ -88,13 +95,11 @@
 
     &__wrapper {
         width: 100%;
-        display: inline-flex;
         align-items: center;
         font-family: var(--core-fontFamily-ibmPlex-sans);
         overflow: hidden;
         position: relative;
         display: flex;
-        gap: var(--component-field-spacing-gap-sm);
 
         &:has(input:disabled) {
             cursor: not-allowed;
@@ -230,11 +235,67 @@
                 padding-inline: var(--component-field-spacing-padding-sm);
                 height: var(--component-field-height-sm);
                 border-radius: var(--component-field-border-radius-sm);
+                gap: var(--component-field-spacing-gap-sm);
             }
             &--md {
                 padding-inline: var(--component-field-spacing-padding-md);
                 height: var(--component-field-height-md);
                 border-radius: var(--component-field-border-radius-md);
+                gap: var(--core-spacing-800);
+            }
+        }
+
+        &-with_button {
+            &-right {
+                &--sm {
+                    padding-inline-end: var(--core-spacing-200);
+                    padding-block: var(--core-spacing-200);
+                }
+                &--md {
+                    padding-inline-end: var(--core-spacing-600);
+                    padding-block: var(--core-spacing-600);
+                }
+            }
+
+            &-bottom {
+                &--md {
+                    flex-direction: column;
+                    height: auto;
+                    padding: var(--component-field-spacing-padding-md);
+
+                    &--has-label {
+                        gap: var(--core-spacing-1200);
+                    }
+
+                    &--has-label:has(input:focus),
+                    &--has-value {
+                        padding-top: var(--temp-static-spacing-7);
+                        gap: var(--temp-static-spacing-15);
+
+                        .input {
+                            padding-top: var(--core-spacing-300);
+                        }
+                        .label {
+                            top: var(--temp-static-spacing-7);
+                        }
+                    }
+
+                    &--no-label {
+                        padding: var(--component-field-spacing-padding-md);
+                        gap: var(--component-field-spacing-padding-md);
+
+                        .input {
+                            padding-top: var(--core-spacing-50);
+                        }
+                    }
+                }
+                &--sm {
+                    flex-direction: column;
+                    height: auto;
+                    padding-block: var(--core-spacing-200)
+                        var(--core-spacing-400);
+                    padding-inline: var(--core-spacing-400);
+                }
             }
         }
 
