--- a/lib/components/Modal/modal.scss
+++ b/lib/components/Modal/modal.scss
@@ -82,7 +82,11 @@
     &__close-icon {
         position: absolute;
         cursor: pointer;
-        top: var(--core-spacing-1600);
+        top: var(--core-spacing-1400);
+        width: var(--core-spacing-2400);
+        padding: var(--core-spacing-600) var(--core-spacing-800);
+        justify-content: center;
+        display: flex;
         right: var(--core-spacing-1600);
     }
     &__content {
