--- a/lib/components/Atom/dropdown/item/item.scss
+++ b/lib/components/Atom/dropdown/item/item.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    cursor: pointer;
     border-radius: var(--component-dropdownItem-border-radius);
 
     &-label {
@@ -102,9 +103,6 @@
                 }
             }
         }
-    }
-    &__active {
-        background-color: var(--component-dropdownItem-bg-active);
     }
 
     &-checkbox {
