chore: rename prop

--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -87,6 +87,14 @@
                 padding: 0px var(--component-actionSheet-spacing-padding-md);
                 min-height: var(--core-size-2400);
                 border-radius: var(--component-dropdownItem-border-radius);
+                color: var(--component-dropdownItem-label-color-default);
+
+                &--hasActive,
+                &--hasActive:enabled:hover {
+                    color: var(
+                        --component-dropdownItem-label-color-selectedWhite
+                    );
+                }
             }
         }
 
