fix: range style for current date

--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -134,6 +134,13 @@
                 color: var(--component-dropdownItem-label-color-default);
                 position: relative;
 
+                &.react-calendar__tile--hover,
+                &:enabled:hover,
+                &:enabled:focus {
+                    background-color: var(
+                        --semantic-color-monochrome-surface-normal-low
+                    );
+                }
                 &:after {
                     content: "";
                     width: var(--core-size-200);
