--- a/lib/components/Atom/dropdown/item/item.scss
+++ b/lib/components/Atom/dropdown/item/item.scss
@@ -20,12 +20,12 @@
 
     &__size {
         &--sm {
-            height: var(--component-dropdownItem-height-item-sm);
+            min-height: var(--component-dropdownItem-height-item-sm);
             padding-inline: var(--component-dropdownItem-spacing-padding-sm);
             gap: var(--component-dropdownItem-spacing-gap-sm);
         }
         &--md {
-            height: var(--component-dropdownItem-height-item-md);
+            min-height: var(--component-dropdownItem-height-item-md);
             padding-inline: var(--component-dropdownItem-spacing-padding-md);
             gap: var(--component-dropdownItem-spacing-gap-md);
         }
