fix: modal overlay bug fix

--- a/lib/components/Modal/modal.scss
+++ b/lib/components/Modal/modal.scss
@@ -93,6 +93,9 @@
         &-wrapper {
             flex-grow: 1;
             overflow-y: scroll;
+            &::-webkit-scrollbar {
+                display: none;
+              }
         }
 
         &-image {
